# platform.core.security.security-server

./: CMakeLists.txt  project.config
packaging/: security-server.changes  security-server.spec
src/: CMakeLists.txt
src/include/: security-manager.h  security-server.h
src/server/: CMakeLists.txt
src/server/client/: client-app-permissions.cpp  client-common.cpp  client-privilege-by-pid.cpp  client-privilege-control.cpp  client-security-manager.cpp
src/server/common/: protocols.cpp  protocols.h  smack-check.cpp  smack-check.h
src/server/db/: app-permissions-db.sql  privilege_db.cpp  privilege_db.h  privilege_db_test.cpp
src/server/dpl/: CMakeLists.txt
src/server/dpl/core/include/dpl/: assert.h  availability.h  char_traits.h  errno_string.h  free_deleter.h  string.h
src/server/dpl/core/src/: errno_string.cpp  string.cpp
src/server/dpl/db/include/dpl/db/: naive_synchronization_object.h  sql_connection.h
src/server/dpl/db/src/: naive_synchronization_object.cpp  sql_connection.cpp
src/server/main/: generic-socket-manager.cpp  generic-socket-manager.h  server2-main.cpp  socket-manager.cpp
src/server/service/: app-permissions.cpp  app-permissions.h  cookie-jar.cpp  cookie.cpp  installer.cpp  installer.h  password-file.cpp  privilege-by-pid.cpp  privilege.cpp  privilege.h  security-manager-common.cpp  security-manager-common.h  smack-rules.cpp  smack-rules.h
systemd/: CMakeLists.txt  security-server-libprivilege-control-get.socket  security-server-libprivilege-control-modify.socket  security-server-libprivilege-control.socket  security-server.service
