PKG_CHECK_MODULES(COMMON_DEP
    dlog
    sqlite3
    db-util
    REQUIRED
    )

FIND_PACKAGE(
    Boost
    REQUIRED
    )

SET(COMMON_PATH ${PROJECT_SOURCE_DIR}/src/server)

SET(COMMON_SOURCES
    ${COMMON_PATH}/common/protocols.cpp
    ${COMMON_PATH}/common/message-buffer.cpp
    ${COMMON_PATH}/common/smack-check.cpp
    ${COMMON_PATH}/dpl/log/src/abstract_log_provider.cpp
    ${COMMON_PATH}/dpl/log/src/dlog_log_provider.cpp
    ${COMMON_PATH}/dpl/log/src/log.cpp
    ${COMMON_PATH}/dpl/log/src/old_style_log_provider.cpp
    ${COMMON_PATH}/dpl/log/src/audit-smack-log.cpp
    ${COMMON_PATH}/dpl/core/src/assert.cpp
    ${COMMON_PATH}/dpl/core/src/binary_queue.cpp
    ${COMMON_PATH}/dpl/core/src/colors.cpp
    ${COMMON_PATH}/dpl/core/src/exception.cpp
    ${COMMON_PATH}/dpl/core/src/noncopyable.cpp
    ${COMMON_PATH}/dpl/core/src/serialization.cpp
    ${COMMON_PATH}/dpl/core/src/singleton.cpp
    ${COMMON_PATH}/dpl/core/src/string.cpp
    ${COMMON_PATH}/dpl/core/src/errno_string.cpp
    ${COMMON_PATH}/dpl/db/src/sql_connection.cpp
    ${COMMON_PATH}/dpl/db/src/naive_synchronization_object.cpp
    ${COMMON_PATH}/db/privilege_db.cpp
    )

INCLUDE_DIRECTORIES(SYSTEM
    ${COMMON_DEP_INCLUDE_DIRS}
    ${Boost_INCLUDE_DIRS}
    )

INCLUDE_DIRECTORIES(
    ${COMMON_PATH}/common
    ${COMMON_PATH}/dpl/core/include
    ${COMMON_PATH}/dpl/log/include
    ${COMMON_PATH}/dpl/db/include
    ${COMMON_PATH}/db
    )

ADD_LIBRARY(${TARGET_SERVER_COMMON} SHARED ${COMMON_SOURCES})

SET_TARGET_PROPERTIES(
    ${TARGET_SERVER_COMMON}
    PROPERTIES
        COMPILE_FLAGS "-D_GNU_SOURCE -fPIC -fvisibility=default"
        SOVERSION 1.0.0
        VERSION 1.0.0
    )

TARGET_LINK_LIBRARIES(${TARGET_SERVER_COMMON}
    ${COMMON_DEP_LIBRARIES}
    )
    
SET(COMMON_PATH ${PROJECT_SOURCE_DIR}/src/server)

SET(PRIVILEGE_DB_TESTS_SOURCES
    ${COMMON_PATH}/dpl/log/src/abstract_log_provider.cpp
    ${COMMON_PATH}/dpl/log/src/dlog_log_provider.cpp
    ${COMMON_PATH}/dpl/log/src/log.cpp
    ${COMMON_PATH}/dpl/log/src/old_style_log_provider.cpp
    ${COMMON_PATH}/dpl/core/src/assert.cpp
    ${COMMON_PATH}/dpl/core/src/binary_queue.cpp
    ${COMMON_PATH}/dpl/core/src/colors.cpp
    ${COMMON_PATH}/dpl/core/src/exception.cpp
    ${COMMON_PATH}/dpl/core/src/noncopyable.cpp
    ${COMMON_PATH}/dpl/core/src/serialization.cpp
    ${COMMON_PATH}/dpl/core/src/singleton.cpp
    ${COMMON_PATH}/dpl/core/src/string.cpp
    ${COMMON_PATH}/dpl/core/src/errno_string.cpp
    ${COMMON_PATH}/dpl/db/src/sql_connection.cpp
    ${COMMON_PATH}/dpl/db/src/naive_synchronization_object.cpp
    ${COMMON_PATH}/db/privilege_db.cpp
    ${COMMON_PATH}/db/privilege_db_test.cpp
    )

ADD_EXECUTABLE (${TARGET_PRIVILEGE_DB_TESTS} ${PRIVILEGE_DB_TESTS_SOURCES})
TARGET_LINK_LIBRARIES(${TARGET_PRIVILEGE_DB_TESTS}
    ${COMMON_DEP_LIBRARIES}
    )

################################################################################

INSTALL(TARGETS ${TARGET_SERVER_COMMON} DESTINATION ${LIB_INSTALL_DIR})
INSTALL(TARGETS ${TARGET_PRIVILEGE_DB_TESTS} DESTINATION bin)